compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_type_in_alias2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 932
expression: "type IntMap = Map(Inf, Int)"

---
error: Unknown type
  ┌─ /src/one/two.gleam:1:19
  │
1 │ type IntMap = Map(Inf, Int)
  │                   ^^^ Did you mean `Int`?

The type `Inf` is not defined or imported in this module.

